--- a/day4/index.html
+++ b/day4/index.html
@@ -5,24 +5,28 @@
 
     </head>
     <body>
-        <h1>font property</h1>
+       <!--<h1>font property</h1>--> 
         <p id="color"> link css and html</p>
         
         <img src="boba.jpg" alt="onepiece" height="50" width="100">
     <button class="one">google</button>
     <p class="font">font style </p>
 
-    <div class="container">
-        <h1>text 1</h1>
-        <h2>text 2</h2>
 
-    </div>
-    <!--cascading-->
+<div class="container">
+    <h1>text 1</h1>
+    <h2>text 2</h2>
+</div>
 
-    <h3 class="text1">data 1</h3>
-        <h3>data 2</h3>
-        <h3>data 3</h3>
-    </h3>
+<!-- Cascading -->
+
+<h3 id="data-1">Data 1</h3>
+<h3 class="data-2">Data 2</h3>
+<h3>Data 3</h3>
+
+<!-- INline Element -->
+<div class="block-element">Test DIV</div>
+<span class="inline-element">SUbas</span>
 
     </body>
 </html>
